# Nature-Language-processing-project

./: README.md
NLP_HW1_NCUE_M1452024/: NLP_HW1_NCUE_M1452024.docx  NLP_HW1_NCUE_M1452024.py  README.md  complete_experient.py  pyproject.toml  requirements.txt  todo5_trainer.py
NLP_HW1_NCUE_M1452024/Picture/: Experient.txt  todo2.txt  ~$P_HW1_report_template.docx  ~WRL0894.tmp
NLP_HW1_NCUE_M1452024/experiments/: experiment_20250917_091131.json  experiment_20250917_132544.json  experiment_20250917_145910.json  experiment_20250917_175256.json  experiment_20250919_104050.json  experiment_20250919_123803.json  experiment_20250919_190619.json  experiment_20250919_212106.json  experiment_20250920_012913.json  experiment_20250920_094235.json
