[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0,<2.1.0",
    "numpy>=1.21.0,<1.25.0",
    "gensim>=4.2.0,<4.4.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0,<3.8.0",
    "scikit-learn>=1.1.0,<1.4.0",
    "psutil>=7.0.0",
]
